# module-6-juniarc-v2

./: README.md  ci.yml
.github/workflows/: ci.yml
flask-demo/: .dockerignore  .env  Dockerfile  app.py  pyproject.toml
flask-demo/config/: dev.py  setting.py  testing.py
flask-demo/dataDummy/: dataDummy.py
flask-demo/migrations/versions/: 07be32e9faa2_create_employees_table.py  270a7d2c3987_edit_enclosures_table.py  50dd8bb92627_create_employees_table.py  5b3814f7ebec_edit_visitor_table.py  92b497f1ad58_create_animal_table.py  add78c484407_edit_enclosures_table.py  e0e287cd5927_initial_migrate.py  eb01f07b90b5_edit_animals_table.py
flask-demo/models/: animals.py  employees.py  enclosures.py  feedings.py  visitors.py
flask-demo/routes/animals/: animals.py
flask-demo/routes/employees/: employees.py
flask-demo/routes/enclosures/: enclosures.py
flask-demo/routes/feedings/: feedings.py
flask-demo/routes/reports/: reports.py
flask-demo/routes/visitors/: visitors.py
flask-demo/tests/: conftest.py
flask-demo/tests/animals/: test_animals.py
flask-demo/tests/employees/: test_employees.py
flask-demo/tests/enclosures/: test_enclosures.py
flask-demo/tests/visitors/: test_visitors.py
flask-demo/utils/: responseMessages.py  validation.py
