[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = ""
authors = ["Cahya Juniar <juniarcahya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
poetry-dotenv-plugin = "^0.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
